# LauschLaus

./: Dockerfile  README.md  docker-compose.yml  get.sh  install.sh  run.sh  test.sh  uninstall.sh
frontend/: .env.example  index.html  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Card.tsx
frontend/src/types/: types.ts
frontend/src/utils/: imageHandler.ts  spotify.ts
frontend/src/views/: AlbumView.tsx  ArtistView.tsx  HistoryView.tsx  PlayerView.tsx
mopidy/: mopidy.conf
mopidy/config/: mopidy.conf.example  mopidy.docker.conf
qt-example/: .xinitrc  CMakeCache.txt  CMakeLists.txt  KidsPlayer  Makefile  build.sh  cleanup.sh  cmake_install.cmake  config.example.json  eglfs.json  main.cpp  main.qml  qrc_resources.cpp  resources.qrc  run.sh
qt-example/KidsPlayer_autogen/: deps  moc_predefs.h
qt-example/components/: TitleBar.qml
qt-example/imports/components/: BackButton.qml  NavigationBar.qml  qmldir
qt-example/imports/utils/: ConfigLoader.qml  MopidyController.qml  SpotifyController.qml  qmldir
qt-example/imports/views/: AlbumsView.qml  ArtistsView.qml  PlayerView.qml  qmldir
qt-example/utils/: MopidyController.qml
qt-example/views/: AlbumsView.qml  ArtistsView.qml
